Apply suggestions from code review
Co-authored-by: Erin Shaben <eshaben@icloud.com>

--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -13,7 +13,7 @@
    "id": "8566fe2a",
    "metadata": {},
    "source": [
-    "There are use cases when models struggle to complete tasks due to lack of specialized knowledge. This could lead to issues like hallucinations where models generate incorrect or fabricated information.\n",
+    "There are use cases when models struggle to complete tasks due to a lack of specialized knowledge. This could lead to issues like hallucinations, where models generate incorrect or fabricated information.\n",
     "To help mitigate this, **Retrieval-Augmented Generation (RAG)** allows the model to pull real-time data from specified sources.\n",
     "\n",
     "This tutorial demonstrates how to use the <a href=\"https://docs.kluster.ai/api-reference/reference/#/http/api-endpoints/embeddings/v1-embeddings-post\" target=\"_blank\">embeddings endpoint</a> in a RAG pipeline with PDF document support using <a href=\"https://docs.llamaindex.ai/en/stable/module_guides/models/embeddings/\" target=\"_blank\">LlamaIndex</a> to handle the data and retrieval. \n",
@@ -33,8 +33,8 @@
     "\n",
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
-    "- **A kluster.ai API key** - after signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
+    "- **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -91,7 +91,7 @@
     "\n",
     "base_url=\"https://api.kluster.ai/v1\"\n",
     "\n",
-    "# Configure Kluster.ai client\n",
+    "# Configure kluster.ai client\n",
     "client = OpenAI(\n",
     "    base_url=base_url,\n",
     "    api_key=api_key\n",
@@ -247,7 +247,7 @@
    "id": "ziqmmbsg1oj",
    "metadata": {},
    "source": [
-    "### Performance comparison: Single vs Batch\n",
+    "### Performance comparison: single vs batch\n",
     "\n",
     "To demonstrate the practical benefits of batch processing, let's compare the performance of individual API calls versus kluster.ai's batch processing using the same set of texts. This comparison will show the time savings and efficiency gains you can expect when implementing batch embeddings in production systems."
    ]
@@ -341,11 +341,11 @@
     "\n",
     "Now that we understand how embeddings work, let's build a complete RAG system using a real PDF document. This section demonstrates how to:\n",
     "\n",
-    "- Download and load a PDF document\n",
-    "- Split the document into manageable chunks\n",
-    "- Convert those chunks into embeddings using kluster.ai\n",
-    "- Create a searchable knowledge base\n",
-    "- Query the system to retrieve relevant information\n",
+    "- Download and load a PDF document.\n",
+    "- Split the document into manageable chunks.\n",
+    "- Convert those chunks into embeddings using kluster.ai.\n",
+    "- Create a searchable knowledge base.\n",
+    "- Query the system to retrieve relevant information.\n",
     "\n",
     "We'll use a research paper about polar bears as our knowledge source, showing how RAG can help answer specific questions about document content that wouldn't be in the LLM's training data."
    ]
@@ -355,7 +355,7 @@
    "id": "f5be42a3",
    "metadata": {},
    "source": [
-    "### Download document\n",
+    "### Download the document\n",
     "For this exercise, this tutorial uses a large PDF file, but you can adapt this to your needs.\n",
     "\n",
     "The files used will serve as the LLM's knowledge base. \n",
@@ -403,7 +403,7 @@
    "id": "b1d8dd11",
    "metadata": {},
    "source": [
-    "### Load Document\n",
+    "### Load the document\n",
     "\n",
     "It's now time to load the 115-page PDF document into memory.\n",
     "\n",
@@ -449,13 +449,13 @@
     "\n",
     "To address this, the document needs to be divided into smaller pieces called chunks. <a href=\"https://docs.llamaindex.ai/en/stable/\" target=\"_blank\">LlamaIndex</a> provides an efficient way to accomplish this.\n",
     "\n",
-    "- **LLM**: the model responsible for generating the responses from the knowledge base.\n",
-    "- **Embedding model**: the model used to convert text into vectors (embeddings), enabling semantic similarity searches.\n",
-    "- **Chunking parameters**: defines how documents are split into smaller chunks (nodes) for indexing:\n",
-    "    - `chunk_size`: the size of each chunk (in tokens).\n",
-    "    - `chunk_overlap`: the number of tokens overlapping between consecutive chunks.\n",
+    "- **LLM**: The model responsible for generating the responses from the knowledge base.\n",
+    "- **Embedding model**: The model used to convert text into vectors (embeddings), enabling semantic similarity searches.\n",
+    "- **Chunking parameters**: Defines how documents are split into smaller chunks (nodes) for indexing:\n",
+    "    - `chunk_size`: The size of each chunk (in tokens).\n",
+    "    - `chunk_overlap`: The number of tokens overlapping between consecutive chunks.\n",
     "\n",
-    "To set up with **kluster.ai**, configure `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
+    "To set up with kluster.ai, configure `OpenAILike` for the LLM and `OpenAILikeEmbedding` for the embedding model."
    ]
   },
   {
@@ -506,7 +506,7 @@
    "id": "c9cc04f1",
    "metadata": {},
    "source": [
-    "### Create the VectorStore\n",
+    "### Create the vector store\n",
     "\n",
     "`VectorStoreIndex.from_documents(documents)` takes the PDF and internally breaks these documents into smaller text chunks (Nodes) using settings like `chunk_size` defined earlier. \n",
     " \n",
@@ -569,7 +569,7 @@
     "\n",
     "When a question is asked, it's first converted into a numerical embedding. The engine then searches the VectorStoreIndex to retrieve the most semantically similar text chunks from the document. Finally, these retrieved chunks (as context) and the original question are given to the LLM to generate a grounded answer.\n",
     "\n",
-    "The following steps create a `query engine` and compare it against a simple LLM with no RAG capabilities."
+    "The following steps create a query engine and compare it against a simple LLM with no RAG capabilities."
    ]
   },
   {
@@ -607,9 +607,9 @@
     "\n",
     "Now that the RAG system is configured, test it with a query about the PDF document. This demonstration shows how a single RAG query processes:\n",
     "\n",
-    "1. **Query processing**: the question is converted into an embedding vector.\n",
-    "2. **Chunk retrieval**: the system finds the most relevant document chunks using similarity search.\n",
-    "3. **Response generation**: the LLM uses the retrieved chunks as context to answer the question.\n",
+    "1. **Query processing**: The question is converted into an embedding vector.\n",
+    "2. **Chunk retrieval**: The system finds the most relevant document chunks using similarity search.\n",
+    "3. **Response generation**: The LLM uses the retrieved chunks as context to answer the question.\n",
     "\n",
     "The following example includes detailed output showing the retrieved chunks and their similarity scores, helping understand how the RAG system selects relevant information from the knowledge base."
    ]
@@ -809,10 +809,10 @@
     "\n",
     "This notebook demonstrated a RAG system using LlamaIndex and kluster.ai, incorporating a PDF document as a knowledge source. Key takeaways include:\n",
     "\n",
-    "1. **Embeddings functionality**: Generated and visualized embeddings using the BAAI/bge-m3 model\n",
-    "2. **Batch processing benefits**: Demonstrated how batch embeddings provide significant performance improvements\n",
-    "3. **PDF integration**: Loaded and processed a research paper for the knowledge base, with LlamaIndex handling embedding batching automatically\n",
-    "4. **RAG vs. Direct LLM comparison**: Compared responses from the RAG system to direct LLM outputs\n",
+    "1. **Embeddings functionality**: Generated and visualized embeddings using the BAAI/bge-m3 model.\n",
+    "2. **Batch processing benefits**: Demonstrated how batch embeddings provide significant performance improvements.\n",
+    "3. **PDF integration**: Loaded and processed a research paper for the knowledge base, with LlamaIndex handling embedding batching automatically.\n",
+    "4. **RAG vs. direct LLM comparison**: Compared responses from the RAG system to direct LLM outputs.\n",
     "\n",
     "**Next Steps:**\n",
     "\n",
