--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "**Models:**\n",
     "- **Embeddings**: Leveraging the <a href=\"https://platform.kluster.ai/models\" target=\"_blank\">BAAI/bge-m3</a> model.\n",
-    "- **Language Model (LLM) for Querying**: Utilizing the <a href=\"https://platform.kluster.ai/playground?model=meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\" target=\"_blank\">meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8</a> model."
+    "- **Language Model (LLM) for querying**: For this example we use <a href=\"https://platform.kluster.ai/playground?model=meta-llama/Llama-4-Maverick-17B-128E-Instruct-FP8\" target=\"_blank\">Llama-4-Maverick-17B.</a> You can also choose any other model from the <a href=\"https://platform.kluster.ai/models\" target=\"_blank\">available models list.</a>"
    ]
   },
   {
@@ -107,7 +107,7 @@
     "\n",
     "Embeddings are numerical representations of text that capture their meaning in a format computers can understand.\n",
     "\n",
-    "Think of embeddings as coordinates in a high-dimensional space, where similar meanings are placed closer together which allows RAG systems to measure how related different pieces of text are, making it easier to find relevant information quickly.\n",
+    "Think of embeddings as coordinates in a high-dimensional space, where similar meanings are placed closer together, which allows RAG systems to measure how related different pieces of text are, making it easier to find relevant information quickly.\n",
     "\n",
     "This section demonstrates how to **generate embeddings** directly using the `BAAI/bge-m3` model and the end result."
    ]
@@ -356,7 +356,7 @@
    "metadata": {},
    "source": [
     "### Download the document\n",
-    "For this exercise, this tutorial uses a large PDF file, but you can adapt this to your needs.\n",
+    "For this exercise, we use a large PDF file, but you can adapt this to your needs.\n",
     "\n",
     "The files used will serve as the LLM's knowledge base. \n",
     "\n",
@@ -405,7 +405,7 @@
    "source": [
     "### Load the document\n",
     "\n",
-    "It's now time to load the 115-page PDF document into memory.\n",
+    "Now it's time to load the 115-page PDF document into memory.\n",
     "\n",
     "This example leverages <a href=\"https://docs.llamaindex.ai/en/stable/examples/data_connectors/simple_directory_reader/\" target=\"_blank\">LlamaIndex</a> `SimpleDirectoryReader` as a data connector. Pass in an input directory or a list of files, and it selects the best file reader based on the file extensions."
    ]
