--- a/tutorials/klusterai-api/rag.ipynb
+++ b/tutorials/klusterai-api/rag.ipynb
@@ -337,7 +337,7 @@
    "id": "91011ad2",
    "metadata": {},
    "source": [
-    "## Building a RAG System with PDF Documents\n",
+    "## Build a RAG system with PDF documents\n",
     "\n",
     "Now that we understand how embeddings work, let's build a complete RAG system using a real PDF document. This section demonstrates how to:\n",
     "\n",
