apply feedback on tutorials

--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -43,8 +43,8 @@
     "\n",
     "Before getting started, ensure you have:\n",
     "\n",
-    "- **A kluster.ai account** - Sign up at [kluster.ai](https://platform.kluster.ai/signup).\n",
-    "- **A kluster.ai API key** - Get your key from the [API Keys](https://platform.kluster.ai/apikeys) page. For instructions, see the [API key guide](https://platform.kluster.ai/get-started/get-api-key/)."
+    "- **A kluster.ai account**: Sign up at [kluster.ai](https://platform.kluster.ai/signup).\n",
+    "- **A kluster.ai API key**: Get your key from the [API Keys](https://platform.kluster.ai/apikeys) page. For instructions, see the [API key guide](https://platform.kluster.ai/get-started/get-api-key/)."
    ]
   },
   {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d1c3d4c4",
    "metadata": {},
    "outputs": [
@@ -316,9 +316,9 @@
     "\n",
     "This Better prompt elevates the request beyond the \"Bad\" version by incorporating pricing details and clearer instructions, which yield more focused calculations and recommendations. The prompt also specifies a timeline (January 2025) and outlines key tasks (calculating revenue, identifying product performance, suggesting sales-boosting strategies). As a result, the LLM response provides:\n",
     "\n",
-    "- **Structured revenue calculations** - By explicitly asking for per-product revenue, it brings a quantitative foundation to the analysis.\n",
-    "- **Actionable recommendations** - Requests for pricing and marketing adjustments prompt specific suggestions, rather than broad, generic ideas.\n",
-    "- **Organized output** - Clearly defined sections ensure the response is easy to interpret and act upon.\n",
+    "- **Structured revenue calculations**: By explicitly asking for per-product revenue, it brings a quantitative foundation to the analysis.\n",
+    "- **Actionable recommendations**: Requests for pricing and marketing adjustments prompt specific suggestions, rather than broad, generic ideas.\n",
+    "- **Organized output**: Clearly defined sections ensure the response is easy to interpret and act upon.\n",
     "\n",
     "However, the prompt stops short of requesting profit margins, customer demographics, or broader business context (e.g., marketing channels or inventory challenges) seen in the Best prompt. Consequently, while the Better prompt moves toward more concrete, data-driven insights, it still lacks the richness and depth needed to produce thorough, strategic recommendations."
    ]
@@ -492,11 +492,11 @@
     "\n",
     "Key strengths of this Best prompt:\n",
     "\n",
-    "- **Complete data & metrics** - Monthly sales, pricing, and profit margins remove guesswork and allow precise revenue/profit calculations.\n",
-    "- **Focused business context** - Target customer demographics, marketing channels, and product nuances (e.g., overstock of Product C) align the output with real business priorities.\n",
-    "- **Clear task breakdown** - Dividing the request into distinct sections (Revenue/Profit Analysis, Profitability Recommendations, Marketing Strategies) ensures the response is both methodical and thorough.\n",
-    "- **Actionability & specificity** - The prompt requests concrete next steps—such as pricing tweaks and promotional ideas—tailored to each product's characteristics and customer segment.\n",
-    "- **Logical reasoning instructions** - Guiding the LLM to \"think step-by-step\" fosters more thoughtful planning, especially around clearing excess inventory and leveraging different marketing channels.\n",
+    "- **Complete data & metrics**: Monthly sales, pricing, and profit margins remove guesswork and allow precise revenue/profit calculations.\n",
+    "- **Focused business context**: Target customer demographics, marketing channels, and product nuances (e.g., overstock of Product C) align the output with real business priorities.\n",
+    "- **Clear task breakdown**: Dividing the request into distinct sections (Revenue/Profit Analysis, Profitability Recommendations, Marketing Strategies) ensures the response is both methodical and thorough.\n",
+    "- **Actionability & specificity**: The prompt requests concrete next steps—such as pricing tweaks and promotional ideas—tailored to each product's characteristics and customer segment.\n",
+    "- **Logical reasoning instructions**: Guiding the LLM to \"think step-by-step\" fosters more thoughtful planning, especially around clearing excess inventory and leveraging different marketing channels.\n",
     "\n",
     "Overall, this approach maximizes the LLM's potential, yielding responses that are precise, context-aware, and immediately useful to decision-makers."
    ]
@@ -647,10 +647,10 @@
     "\n",
     "The AI‑enhanced prompt is stronger because it embeds several best‑practice elements that the baseline prompt omits:\n",
     "\n",
-    "- **Clear scope & constraints** - Sets time horizon, budget, and focus areas so the model delivers realistic short-term actions.\n",
-    "- **Structured, ranked output** - Provides a template and asks for impact-ordered steps with supporting calculations for decision-ready clarity.\n",
-    "- **Rich context** - Supplies demographics, product details, challenges, and KPIs to drive tailored, not generic, recommendations.\n",
-    "- **Built-in risk check** - Requires downside analysis on each suggestion, surfacing trade-offs upfront.\n",
+    "- **Clear scope & constraints**: Sets time horizon, budget, and focus areas so the model delivers realistic short-term actions.\n",
+    "- **Structured, ranked output**: Provides a template and asks for impact-ordered steps with supporting calculations for decision-ready clarity.\n",
+    "- **Rich context**: Supplies demographics, product details, challenges, and KPIs to drive tailored, not generic, recommendations.\n",
+    "- **Built-in risk check**: Requires downside analysis on each suggestion, surfacing trade-offs upfront.\n",
     "\n",
     "These additions sharpen the prompt's clarity, specificity, and operational relevance; they tell the model exactly what to deliver, within which limits, and how to present it, thereby increasing the likelihood of receiving actionable, decision‑ready insights regardless of which LLM you use."
    ]
@@ -774,11 +774,11 @@
     "The AI-generated answer stands out by delivering execution-ready depth the human version lacks:\n",
     "\n",
     "\n",
-    "- **Quantified impact & ROI** – Forecasts unit lifts and rolls them into a +34 % profit gain, turning ideas into numbers managers can judge.\n",
-    "- **Actionable constraints** – Assigns a $200 channel budget, splits spending, and names KPIs, giving a plug-and-play operating plan.\n",
-    "- **Contextual targeting** – Ties every promo to a demographic and to inventory pressure, showing clear \"why this, why now\" logic.\n",
-    "- **Concise orientation** – Opens with a single P&L table and ranked profit list so readers grasp the situation at a glance.\n",
-    "- **Notable caveat** – A bundle-margin math slip highlights the need to prompt for intermediate calculations and self-checks.\n",
+    "- **Quantified impact & ROI**: Forecasts unit lifts and rolls them into a +34 % profit gain, turning ideas into numbers managers can judge.\n",
+    "- **Actionable constraints**: Assigns a $200 channel budget, splits spending, and names KPIs, giving a plug-and-play operating plan.\n",
+    "- **Contextual targeting**: Ties every promo to a demographic and to inventory pressure, showing clear \"why this, why now\" logic.\n",
+    "- **Concise orientation**: Opens with a single P&L table and ranked profit list so readers grasp the situation at a glance.\n",
+    "- **Notable caveat**: A bundle-margin math slip highlights the need to prompt for intermediate calculations and self-checks.\n",
     "\n",
     "The strongest prompt may likely be hybrid style: AI-refined for structure and numeric rigor, augmented with human-driven goals for brevity and inventive marketing flair."
    ]
@@ -792,18 +792,18 @@
     "\n",
     "This side-by-side comparison demonstrates how the quality and specificity of a prompt directly influence the depth, utility, and strategic value of an LLM's output:\n",
     "\n",
-    "- **Bad prompt** - Minimal data and vague instructions yield only superficial insights—no clear direction or actionable strategies.\n",
-    "- **Better prompt** - Adding pricing details and specific tasks (like calculating revenue or ranking products) results in more concrete analysis and targeted recommendations.\n",
-    "- **Best prompt** - Providing comprehensive context—including profit margins, demographics, inventory challenges, and explicit formatting instructions—empowers the model to deliver nuanced, highly actionable advice aligned with real business needs.\n",
-    "- **AI‑enhanced prompt** — Layering on a defined 3‑to‑6‑month time horizon, a fixed $2,000 marketing budget, ranked priorities, risk/trade‑off notes, and requests for supporting calculations guides the model to provide an even more operationally realistic, budget‑aware, and immediately implementable plan of action.\n",
+    "- **Bad prompt**: Minimal data and vague instructions yield only superficial insights—no clear direction or actionable strategies.\n",
+    "- **Better prompt**: Adding pricing details and specific tasks (like calculating revenue or ranking products) results in more concrete analysis and targeted recommendations.\n",
+    "- **Best prompt**: Providing comprehensive context—including profit margins, demographics, inventory challenges, and explicit formatting instructions—empowers the model to deliver nuanced, highly actionable advice aligned with real business needs.\n",
+    "- **AI‑enhanced prompt**: Layering on a defined 3‑to‑6‑month time horizon, a fixed $2,000 marketing budget, ranked priorities, risk/trade‑off notes, and requests for supporting calculations guides the model to provide an even more operationally realistic, budget‑aware, and immediately implementable plan of action.\n",
     "\n",
     "Key takeaways for effective prompt engineering:\n",
     "\n",
-    "- **Provide relevant context** - Include all essential data (pricing, margins, customer segments) to enable deeper analysis.\n",
-    "- **Specify instructions clearly** - Outline the tasks, format, and reasoning style (e.g., step-by-step) you want the model to follow.\n",
-    "- **Articulate business constraints and goals** - Highlight challenges (e.g., excess inventory, limited budget) to guide strategic recommendations.\n",
-    "- **Structure the output requirements** - Break down the response into clear, logical sections (analysis, recommendations, marketing, etc.).\n",
-    "- **Iterate for best results** - Incrementally refining prompts yields exponentially better outcomes—invest time upfront for far greater business value.\n",
+    "- **Provide relevant context**: Include all essential data (pricing, margins, customer segments) to enable deeper analysis.\n",
+    "- **Specify instructions clearly**: Outline the tasks, format, and reasoning style (e.g., step-by-step) you want the model to follow.\n",
+    "- **Articulate business constraints and goals**: Highlight challenges (e.g., excess inventory, limited budget) to guide strategic recommendations.\n",
+    "- **Structure the output requirements**: Break down the response into clear, logical sections (analysis, recommendations, marketing, etc.).\n",
+    "- **Iterate for best results**: Incrementally refining prompts yields exponentially better outcomes—invest time upfront for far greater business value.\n",
     "\n",
     "By enriching prompts with thorough details and well-defined objectives, you unlock the full potential of LLMs to generate accurate, context-aware, and immediately applicable insights."
    ]
