--- a/tutorials/klusterai-api/image-analysis.ipynb
+++ b/tutorials/klusterai-api/image-analysis.ipynb
@@ -71,8 +71,8 @@
    "source": [
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
-    "- **A kluster.ai API key** - After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
+    "- **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -294,11 +294,11 @@
    "source": [
     "To execute the batch inference job, we'll take the following steps:\n",
     "\n",
-    "1. **Create the batch job file** - We'll generate a JSON lines file with the desired requests to be processed by the model.\n",
-    "2. **Upload the batch job file** - Once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file.\n",
-    "3. **Start the batch job** - After the file is uploaded, we'll initiate the job to process the uploaded data, using the file ID obtained before.\n",
-    "4. **Monitor job progress (optional)** - Track the status of the batch job to ensure it has been successfully completed.\n",
-    "5. **Retrieve results** - Once the job has completed execution, we can access and process the resultant data.\n",
+    "1. **Create the batch job file**: We'll generate a JSON lines file with the desired requests to be processed by the model.\n",
+    "2. **Upload the batch job file**: Once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file.\n",
+    "3. **Start the batch job**: After the file is uploaded, we'll initiate the job to process the uploaded data, using the file ID obtained before.\n",
+    "4. **Monitor job progress (optional)**: Track the status of the batch job to ensure it has been successfully completed.\n",
+    "5. **Retrieve results**: Once the job has completed execution, we can access and process the resultant data.\n",
     "\n",
     "This notebook is prepared for you to follow along. Run the cells below to watch it all come together."
    ]
