--- a/tutorials/klusterai-api/uploads-api.ipynb
+++ b/tutorials/klusterai-api/uploads-api.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - Sign up on the [kluster.ai platform](https://platform.kluster.ai/signup) if you don't have one.\n",
-    "- **A kluster.ai API key** - After signing in, go to the [**API Keys**](https://platform.kluster.ai/apikeys) section and create a new key."
+    "- **A kluster.ai account**: Sign up on the [kluster.ai platform](https://platform.kluster.ai/signup) if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the [**API Keys**](https://platform.kluster.ai/apikeys) section and create a new key."
    ]
   },
   {
@@ -694,11 +694,11 @@
     "\n",
     "Here are some best practices and tips for using the kluster.ai Uploads API effectively:\n",
     "\n",
-    "- **Optimal part size** - Choose an appropriate part size based on your network conditions. While the API allows parts up to 64 MB, you might want to use smaller parts if your network is unstable.\n",
-    "- **Parallel uploads** - For very large files, consider uploading parts in parallel to speed up the process.\n",
-    "- **Error handling** - Implement proper error handling and retries for failed part uploads.\n",
-    "- **Upload expiration** - Remember that uploads expire after an hour, so make sure to complete the upload within that time frame.\n",
-    "- **Cleanup** - Always clean up temporary files created during the upload process."
+    "- **Optimal part size**: Choose an appropriate part size based on your network conditions. While the API allows parts up to 64 MB, you might want to use smaller parts if your network is unstable.\n",
+    "- **Parallel uploads**: For very large files, consider uploading parts in parallel to speed up the process.\n",
+    "- **Error handling**: Implement proper error handling and retries for failed part uploads.\n",
+    "- **Upload expiration**: Remember that uploads expire after an hour, so make sure to complete the upload within that time frame.\n",
+    "- **Cleanup**: Always clean up temporary files created during the upload process."
    ]
   },
   {
