--- a/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
+++ b/tutorials/klusterai-api/finetuning-sent-analysis.ipynb
@@ -74,8 +74,8 @@
    "source": [
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
-    "- **A kluster.ai API key** - After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
+    "- **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -386,11 +386,11 @@
     "\n",
     "To fine-tune a model, we'll take the following steps:\n",
     "\n",
-    "1. **Create the training data file** - We'll generate a JSON lines file with the training data that contains the data and ground truth.\n",
-    "2. **Upload the training data file** - Once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file.\n",
-    "3. **Create fine-tuning job** - After the file is uploaded, we'll initiate the fine-tuning job, using the file ID obtained before.\n",
-    "4. **Monitor job progress (optional)** - Track the status of the fine-tuning job to ensure it has been successfully completed.\n",
-    "5. **Retrieve results** - Once the job has completed execution, we will get a fine-tuned model that we can use.\n",
+    "1. **Create the training data file**: We'll generate a JSON lines file with the training data that contains the data and ground truth.\n",
+    "2. **Upload the training data file**: Once it is ready, we'll upload it to the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> using the API, where it will be processed. We'll receive a unique ID associated with our file.\n",
+    "3. **Create fine-tuning job**: After the file is uploaded, we'll initiate the fine-tuning job, using the file ID obtained before.\n",
+    "4. **Monitor job progress (optional)**: Track the status of the fine-tuning job to ensure it has been successfully completed.\n",
+    "5. **Retrieve results**: Once the job has completed execution, we will get a fine-tuned model that we can use.\n",
     "\n",
     "This notebook is prepared for you to follow along. Run the cells below to watch it all come together.\n",
     "\n",
