--- a/tutorials/klusterai-api/integrating-tools.ipynb
+++ b/tutorials/klusterai-api/integrating-tools.ipynb
@@ -41,8 +41,8 @@
    "source": [
     "Before getting started, ensure you have the following:\n",
     "\n",
-    "- **A kluster.ai account** - Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
-    "- **A kluster.ai API key** - After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
+    "- **A kluster.ai account**: Sign up on the <a href=\"https://platform.kluster.ai/signup\" target=\"_blank\">kluster.ai platform</a> if you don't have one.\n",
+    "- **A kluster.ai API key**: After signing in, go to the <a href=\"https://platform.kluster.ai/apikeys\" target=\"_blank\">**API Keys**</a> section and create a new key. For detailed instructions, check out the <a href=\"/get-started/get-api-key/\" target=\"_blank\">Get an API key</a> guide."
    ]
   },
   {
@@ -306,10 +306,10 @@
     "Let's take a closer look at the response above. The assistant’s reply isn’t prose; rather, it’s a structured tool call:\n",
     "\n",
     "1. **`finish_reason: \"tool_calls\"`**: Signals the model has paused, waiting for us to run one or more tools.\n",
-    "2. **`message.tool_calls[0]`**: An array item that describes what to run:\n",
-    "   * `id` – a unique identifier we must echo back.\n",
-    "   * `function.name` – here it's `calculator`.\n",
-    "   * *`function.arguments`* – JSON-encoded string with the expression *`\"1337  42\"`.\n",
+    "2. **`message.tool_calls[0]`** an array item that describes what to run:\n",
+    "   * `id`: A unique identifier we must echo back.\n",
+    "   * `function.name`: Here it's `calculator`.\n",
+    "   * *`function.arguments`*: JSON-encoded string with the expression *`\"1337  42\"`.\n",
     "3. **`content: null`**: No human-readable answer yet; that will come after we execute the tool and return the result.\n",
     "\n",
     "In short, the model has delegated the arithmetic. Our job is to run `execute_calculator(\"1337 * 42\")`, package the numeric result in a `{role:\"tool\"}` message (preserving the `tool_call_id`), and feed it back to the chat endpoint.\n",
