--- a/tutorials/klusterai-api/effective-prompt-engineering.ipynb
+++ b/tutorials/klusterai-api/effective-prompt-engineering.ipynb
@@ -85,8 +85,8 @@
     "\n",
     "api_key = getpass('Enter your kluster.ai API key: ')\n",
     "\n",
-    "# Feel free to swap out the model with any of Kluster's supported models\n",
-    "# You can also use your own Kluster dedicated deployment after launching one\n",
+    "# Feel free to swap out the model with any of kluster's supported models\n",
+    "# You can also use your own kluster.ai dedicated deployment after launching one\n",
     "# And specifying the model ID as the model parameter. \n",
     "# For more details, see https://docs.kluster.ai/get-started/dedicated-deployments/\n",
     "model = \"google/gemma-3-27b-it\"\n",
