--- a/tutorials/klusterai-api/image-analysis.ipynb
+++ b/tutorials/klusterai-api/image-analysis.ipynb
@@ -936,7 +936,7 @@
     "\n",
     "All of this using the OpenAI Python library and API, no changes needed!\n",
     "\n",
-    "Kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As the next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
+    "kluster.ai's batch API empowers you to scale your workflows seamlessly, making it an invaluable tool for processing extensive datasets. As the next steps, feel free to create your own dataset, or expand on top of this existing example. Good luck!"
    ]
   }
  ],
